--- a/pydetex/res/placeholder_en.tex
+++ b/pydetex/res/placeholder_en.tex
@@ -10,5 +10,5 @@ Or \myCustomCommand[\label{cmd1}]{can process \textbf{lists}}:
 
 \begin{itemize}[font=\bfseries]
    \item As shown in Figure \ref{fignumber}
-   \item Proposed by $\alpha$-Feltes \cite{feltes2008} because $x^n + y^n = z^n \forall n \in \mathcal{R}$
+   \item Proposed by $\alpha$-Feltes \cite{feltes2008} because $x^n + y^n = z^n \forall n \in 0 \ldots \infty$
 \end{itemize}
