--- a/pydetex/res/placeholder_es.tex
+++ b/pydetex/res/placeholder_es.tex
@@ -10,5 +10,5 @@ PyDetex puede procesar ecuaciones, listas, citas, referencias, y mucho más:
 
 \begin{itemize}[font=\bfseries]
    \item Como es ilustrado en la Figura \ref{fignumber}
-   \item Propuesto por $\alpha$-Feltes \cite{feltes2008} dado que $x^n + y^n = z^n \forall n \in \mathcal{R}$
+   \item Propuesto por $\alpha$-Feltes \cite{feltes2008} dado que $x^n + y^n = z^n \forall n \in 0 \ldots \infty$
 \end{itemize}
